--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv=”refresh” content=”0;url=http://www.canisellmyredfinstocks.com”>
-  </head>
+<head>
+  <meta http-equiv=”refresh” content=”0;url=http://www.canisellmyredfinstocks.com”>
+  <script type="text/javascript">
+  window.location.href = "http://www.canisellmyredfinstocks.com"
+  </script>
+</head>
 </html>
