--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
   window.location.href = "http://www.canisellmyredfinstocks.com"
   </script>
 </head>
+<body>
+  www.canisellmyredfinstocks.com
+</body>
 </html>
